# blinky-app-st

./: CMakeLists.txt  README.md  build.sh  stm32g0b1retx_flash.ld
inc/: stm32g0xx.h
src/: main.c  startup_stm32g0b1xx.s  system_stm32g0xx.c
